refactor(app): refactor application
