# openapi.yaml
@@ -1,128 +1,81 @@
-openapi: 3.0.0
-paths:
-  "/conference/{conference_id}":
-    parameters:
-      - name: conference_id
-        in: path
-        required: true
-        schema:
-          type: integer
-    get:
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Conference"
-      summary: Get a conference by ID
-      operationId: get_conference
-      parameters:
-        - name: X-Fields
-          in: header
-          description: An optional fields mask
-          schema:
-            type: string
-            format: mask
-      tags:
-        - default
-  /conferences:
-    get:
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Conference"
-      summary: List all conferences
-      operationId: list_conferences
-      parameters:
-        - name: X-Fields
-          in: header
-          description: An optional fields mask
-          schema:
-            type: string
-            format: mask
-      tags:
-        - default
-  "/conferences/{conference_id}/reviews":
-    parameters:
-      - name: conference_id
-        in: path
-        required: true
-        schema:
-          type: integer
-    get:
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Review"
-      summary: List reviews for a specific conference
-      operationId: get_reviews_for_conference
-      parameters:
-        - name: X-Fields
-          in: header
-          description: An optional fields mask
-          schema:
-            type: string
-            format: mask
-      tags:
-        - default
-  /reviews:
-    get:
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Review"
-      summary: List all reviews
-      operationId: list_reviews
-      parameters:
-        - name: X-Fields
-          in: header
-          description: An optional fields mask
-          schema:
-            type: string
-            format: mask
-      tags:
-        - default
+openapi: 3.0.3
 info:
-  title: Conference API
-  version: "1.0"
-  description: API for managing conferences and reviews
-tags:
-  - name: default
-    description: Default namespace
+  title: Choreo Samples - Review Management - REST API
+  description: >-
+    This is a API specification for a conference and review management system.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  version: 1.0.0
 servers:
-  - url: /
+  - url: http://localhost:5000
+tags:
+  - name: reviews
+    description: API to retrieve reviews for conferences
+paths:
+  /conferences:
+    summary: List all conferences
+    get:
+      summary: List all conferences
+      operationId: ListAllConferences
+      tags:
+        - conferences
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConferenceArray"
+  /conferences/{id}:
+    summary: Get conference by ID
+    get:
+      tags:
+        - conferences
+      summary: Get conference by ID
+      operationId: GetConferenceById
+      parameters:
+        - name: id
+          in: path
+          description: id of conference to return
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Conference"
+        "404":
+          description: id not found
+  /conferences/{id}/reviews:
+    summary: List all reviews for a conference    
+    get:
+      summary: List all reviews for a conference
+      operationId: ListAllReviewsForConference
+      tags:
+        - reviews
+      parameters:
+        - name: id
+          in: path
+          description: id of conference to return reviews for
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ReviewArray"
+
 components:
-  responses:
-    ParseError:
-      description: When a mask can't be parsed
-    MaskError:
-      description: When any error occurs on mask
   schemas:
     Conference:
-      required:
-        - description
-        - end_date
-        - id
-        - location
-        - name
-        - overall_rating
-        - speakers
-        - start_date
-        - website
+      type: object
       properties:
         id:
           type: integer
@@ -155,14 +108,12 @@ components:
         overall_rating:
           type: number
           description: The conference overall rating
-      type: object
+    ConferenceArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/Conference'
     Review:
-      required:
-        - conference_id
-        - description
-        - id
-        - rating
-        - user_id
+      type: object
       properties:
         id:
           type: integer
@@ -179,4 +130,7 @@ components:
         rating:
           type: number
           description: The review rating
-      type: object
+    ReviewArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/Review'
